Implement core UI components with React